Increase size of search box

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -146,6 +146,9 @@
 
   --search-item-text-color: var(--c-text-lighter);
   --search-item-focus-bg-color: var(--c-bg-light);
+
+  --search-input-width: 25rem;
+  --search-result-width: 45rem;
 }
 
 // ----------------------------------------------------------------------------------------------- //
