--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -2,7 +2,10 @@
   // brand colors
   --c-brand: #F09838;
   --c-brand-light: #F0C738;
-
+    
+  // Other
+  --success: #157938;
+    
   // background colors
   --c-bg: #ffffff;
   --c-bg-light: #f3f4f5;
@@ -237,4 +240,16 @@ html.dark .DocSearch {
   --docsearch-key-gradient: linear-gradient(-225deg, #444950, #1c1e21);
   --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
   0 -4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+// ----------------------------------------------------------------------------------------------- //
+// Badges
+// ----------------------------------------------------------------------------------------------- //
+
+.badge {
+    
+    &.success {
+        background-color: var(--success);
+    }
+    
 }
