--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -1,157 +1,215 @@
+// === colors ===
 :root {
-  // brand colors
-  --c-brand: #F09838;
-  --c-brand-light: #F0C738;
+    // brand colors
+    --c-brand: #F09838;
+    --c-brand-light: #F0C738;
+    --c-brand-dark: #f08538;
+
+    // Other
+    --success: #157938;
     
-  // Other
-  --success: #157938;
+    // colors.scss
+    --vp-c-white: #fff;
+    --vp-c-black: #000;
+    --vp-c-grey-text: #656869;
+    --vp-c-grey-hover: #e4e4e9;
+    --vp-c-grey-bg: #ebebef;
+    --vp-c-grey-soft: rgb(142 150 170 / 14%);
+    --vp-c-indigo-text: #3451b2;
+    --vp-c-indigo-hover: #3a5ccc;
+    --vp-c-indigo-bg: #5672cd;
+    --vp-c-indigo-soft: rgb(100 108 255 / 14%);
+    --vp-c-purple-text: #6f42c1;
+    --vp-c-purple-hover: #7e4cc9;
+    --vp-c-purple-bg: #8e5cd9;
+    --vp-c-purple-soft: rgb(159 122 234 / 14%);
+    --vp-c-blue-text: #2888a7;
+    --vp-c-blue-hover: #2d98ba;
+    --vp-c-blue-bg: #2fa1c5;
+    --vp-c-blue-soft: rgb(27 178 229 / 14%);
+    --vp-c-green-text: #18794e;
+    --vp-c-green-hover: #299764;
+    --vp-c-green-bg: #30a46c;
+    --vp-c-green-soft: rgb(16 185 129 / 14%);
+    --vp-c-yellow-text: #915930;
+    --vp-c-yellow-hover: #946300;
+    --vp-c-yellow-bg: #c28100;
+    --vp-c-yellow-soft: rgb(234 179 8 / 14%);
+    --vp-c-red-text: #b8272c;
+    --vp-c-red-hover: #d5393e;
+    --vp-c-red-bg: #e0575b;
+    --vp-c-red-soft: rgb(244 63 94 / 14%);
+    // END colors.scss
     
-  // background colors
-  --c-bg: #ffffff;
-  --c-bg-light: #f3f4f5;
-  --c-bg-lighter: #eeeeee;
-  --c-bg-dark: #ebebec;
-  --c-bg-darker: #e6e6e6;
-  --c-bg-navbar: var(--c-bg);
-  --c-bg-sidebar: var(--c-bg);
-  --c-bg-arrow: #cccccc;
+    // accent colors
+    --vp-c-accent: var(--c-brand);
+    --vp-c-accent-bg: var(--c-brand);
+    --vp-c-accent-hover: var(--c-brand-light);
+    --vp-c-accent-text: var(--vp-c-white);
+    --vp-c-accent-soft: rgb(16 185 129 / 14%);
 
-  // text colors
-  --c-text: #2c3e50;
-  --c-text-accent: var(--c-brand);
-  --c-text-light: #3a5169;
-  --c-text-lighter: #4e6e8e;
-  --c-text-lightest: #6a8bad;
-  --c-text-quote: #999999;
+    // background colors
+    --vp-c-bg: #fff;
+    --vp-c-bg-alt: #f6f6f7;
+    --vp-c-bg-elv: #fff;
 
-  // border colors
-  --c-border: #eaecef;
-  --c-border-dark: #dfe2e5;
+    // text colors
+    --vp-c-text: #2c3e50;
+    --vp-c-text-mute: #3a5169;
+    --vp-c-text-subtle: #4e6e8e;
 
-  // custom container colors
-  --c-tip: #4F81D6;
-  --c-tip-bg: var(--c-bg-light);
-  --c-tip-title: var(--c-text);
-  --c-tip-text: var(--c-text);
-  --c-tip-text-accent: var(--c-text-accent);
-  --c-warning: #ffc310;
-  --c-warning-bg: #fffae3;
-  --c-warning-bg-light: #fff3ba;
-  --c-warning-bg-lighter: #fff0b0;
-  --c-warning-border-dark: #f7dc91;
-  --c-warning-details-bg: #fff5ca;
-  --c-warning-title: #f1b300;
-  --c-warning-text: #746000;
-  --c-warning-text-accent: #edb100;
-  --c-warning-text-light: #c1971c;
-  --c-warning-text-quote: #ccab49;
-  --c-danger: #f11e37;
-  --c-danger-bg: #ffe0e0;
-  --c-danger-bg-light: #ffcfde;
-  --c-danger-bg-lighter: #ffc9c9;
-  --c-danger-border-dark: #f1abab;
-  --c-danger-details-bg: #ffd4d4;
-  --c-danger-title: #ed1e2c;
-  --c-danger-text: #660000;
-  --c-danger-text-accent: #bd1a1a;
-  --c-danger-text-light: #b5474d;
-  --c-danger-text-quote: #c15b5b;
-  --c-details-bg: #eeeeee;
+    // border colors
+    --vp-c-gutter: #e2e2e3;
+    --vp-c-border: #eaecef;
+    --vp-c-border-hard: #dfe2e5;
 
-  // badge component colors
-  --c-badge-tip: var(--c-tip);
-  --c-badge-warning: #ecc808;
-  --c-badge-warning-text: var(--c-bg);
-  --c-badge-danger: #dc2626;
-  --c-badge-danger-text: var(--c-bg);
+    // shadow colors
+    --vp-c-shadow: rgb(0 0 0 / 15%);
 
-  // transition vars
-  --t-color: 0.3s ease;
-  --t-transform: 0.3s ease;
+    // control colors
+    --vp-c-control: rgb(142 150 170 / 10%);
+    --vp-c-control-hover: rgb(142 150 170 / 16%);
+    --vp-c-control-disabled: #eaeaea;
 
-  // code blocks vars
-  --code-bg-color: #282c34;
-  --code-hl-bg-color: rgba(0, 0, 0, 0.66);
-  --code-ln-color: #9e9e9e;
-  --code-ln-wrapper-width: 3.5rem;
+    // layout colors
+    --vp-navbar-c-bg: var(--vp-c-bg);
+    --vp-sidebar-c-bg: var(--vp-c-bg);
 
-  // font vars
-  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-  Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  --font-family-code: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    // code group colors
+    --vp-c-code-tab-title: var(--code-c-text, rgb(255 255 255 / 90%));
+    --vp-c-code-tab-bg: var(--code-bg-color, var(--code-c-bg));
+    --vp-c-code-tab-active: var(--vp-c-accent);
 
-  // layout vars
-  --navbar-height: 3.6rem;
-  --navbar-padding-v: 0.7rem;
-  --navbar-padding-h: 1.5rem;
-  --sidebar-width: 20rem;
-  --sidebar-width-mobile: calc(var(--sidebar-width) * 0.82);
-  --content-width: 740px;
-  --homepage-width: 960px;
+    // badge colors
+    --badge-c-tip-text: var(--vp-c-blue-text);
+    --badge-c-tip-bg: var(--vp-c-blue-soft);
+    --badge-c-warning-text: var(--vp-c-yellow-text);
+    --badge-c-warning-bg: var(--vp-c-yellow-soft);
+    --badge-c-danger-text: var(--vp-c-red-text);
+    --badge-c-danger-bg: var(--vp-c-red-soft);
+    --badge-c-important-text: var(--vp-c-purple-text);
+    --badge-c-important-bg: var(--vp-c-purple-soft);
+    --badge-c-info-text: var(--vp-c-indigo-text);
+    --badge-c-info-bg: var(--vp-c-indigo-soft);
+    --badge-c-note-text: var(--vp-c-grey-text);
+    --badge-c-note-bg: var(--vp-c-grey-soft);
+
+    // font vars
+    --font-family: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', roboto, oxygen,
+    ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+
+    // layout vars
+    --navbar-height: 3.6rem;
+    --navbar-padding-v: 0.7rem;
+    --navbar-padding-h: 1.5rem;
+    --sidebar-width: 20rem;
+    --sidebar-width-mobile: calc(var(--sidebar-width) * 0.82);
+    --content-width: 740px;
+    --homepage-width: 960px;
+
+    // header offset
+    --header-offset: var(--navbar-height);
+
+    // transition vars
+    --vp-t-color: 0.3s ease;
+    --vp-t-transform: 0.3s ease;
+
+    // external-link-icon
+    --external-link-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24H0V0z' fill='none'/%3E%3Cpath d='M9 5v2h6.59L4 18.59 5.41 20 17 8.41V15h2V5H9z'/%3E%3C/svg%3E");
+    --external-link-c-icon: var(--vp-c-text-mute);
 }
+
+// ----------------------------------------------------------------------------------------------- //
+// Theme overwrites
+// ----------------------------------------------------------------------------------------------- //
+
+body {
+    color: var(--vp-c-text);
+}
+
+code {
+    color: var(--vp-c-text-subtle);
+}
+
+.vp-hero-action-button {
+    
+    &.primary {
+        &:hover {
+            border-color: var(--c-brand-dark);
+        }
+    }
+    
+    &:hover {
+        background-color: var(--c-brand-light);    
+    }
+}
+
+// ----------------------------------------------------------------------------------------------- //
+// Other Components
+// ----------------------------------------------------------------------------------------------- //
 
 // plugin-back-to-top
 .back-to-top {
-  --back-to-top-color: var(--c-brand);
-  --back-to-top-color-hover: var(--c-brand-light);
+    --back-to-top-color: var(--c-brand);
+    --back-to-top-color-hover: var(--c-brand-light);
 }
 
 // plugin-docsearch
 .DocSearch {
-  --docsearch-primary-color: var(--c-brand);
-  --docsearch-text-color: var(--c-text);
-  --docsearch-highlight-color: var(--c-brand);
-  --docsearch-muted-color: var(--c-text-quote);
-  --docsearch-container-background: rgba(9, 10, 17, 0.8);
-  --docsearch-modal-background: var(--c-bg-light);
-  --docsearch-searchbox-background: var(--c-bg-lighter);
-  --docsearch-searchbox-focus-background: var(--c-bg);
-  --docsearch-searchbox-shadow: inset 0 0 0 2px var(--c-brand);
-  --docsearch-hit-color: var(--c-text-light);
-  --docsearch-hit-active-color: var(--c-bg);
-  --docsearch-hit-background: var(--c-bg);
-  --docsearch-hit-shadow: 0 1px 3px 0 var(--c-border-dark);
-  --docsearch-footer-background: var(--c-bg);
+    --docsearch-primary-color: var(--c-brand);
+    --docsearch-text-color: var(--c-text);
+    --docsearch-highlight-color: var(--c-brand);
+    --docsearch-muted-color: var(--c-text-quote);
+    --docsearch-container-background: rgba(9, 10, 17, 0.8);
+    --docsearch-modal-background: var(--c-bg-light);
+    --docsearch-searchbox-background: var(--c-bg-lighter);
+    --docsearch-searchbox-focus-background: var(--c-bg);
+    --docsearch-searchbox-shadow: inset 0 0 0 2px var(--c-brand);
+    --docsearch-hit-color: var(--c-text-light);
+    --docsearch-hit-active-color: var(--c-bg);
+    --docsearch-hit-background: var(--c-bg);
+    --docsearch-hit-shadow: 0 1px 3px 0 var(--c-border-dark);
+    --docsearch-footer-background: var(--c-bg);
 }
 
 // plugin-external-link-icon
 .external-link-icon {
-  --external-link-icon-color: var(--c-text-quote);
+    --external-link-icon-color: var(--c-text-quote);
 }
 
 // plugin-medium-zoom
 .medium-zoom-overlay {
-  --medium-zoom-bg-color: var(--c-bg);
+    --medium-zoom-bg-color: var(--c-bg);
 }
 
 // plugin-nprogress
 #nprogress {
-  --nprogress-color: var(--c-brand);
+    --nprogress-color: var(--c-brand);
 }
 
 // plugin-pwa-popup
 .pwa-popup {
-  --pwa-popup-text-color: var(--c-text);
-  --pwa-popup-bg-color: var(--c-bg);
-  --pwa-popup-border-color: var(--c-brand);
-  --pwa-popup-shadow: 0 4px 16px var(--c-brand);
-  --pwa-popup-btn-text-color: var(--c-bg);
-  --pwa-popup-btn-bg-color: var(--c-brand);
-  --pwa-popup-btn-hover-bg-color: var(--c-brand-light);
+    --pwa-popup-text-color: var(--c-text);
+    --pwa-popup-bg-color: var(--c-bg);
+    --pwa-popup-border-color: var(--c-brand);
+    --pwa-popup-shadow: 0 4px 16px var(--c-brand);
+    --pwa-popup-btn-text-color: var(--c-bg);
+    --pwa-popup-btn-bg-color: var(--c-brand);
+    --pwa-popup-btn-hover-bg-color: var(--c-brand-light);
 }
 
 // plugin-search
 .search-box {
-  --search-bg-color: var(--c-bg);
-  --search-accent-color: var(--c-brand);
-  --search-text-color: var(--c-text);
-  --search-border-color: var(--c-border);
+    --search-bg-color: var(--c-bg);
+    --search-accent-color: var(--c-brand);
+    --search-text-color: var(--c-text);
+    --search-border-color: var(--c-border);
 
-  --search-item-text-color: var(--c-text-lighter);
-  --search-item-focus-bg-color: var(--c-bg-light);
+    --search-item-text-color: var(--c-text-lighter);
+    --search-item-focus-bg-color: var(--c-bg-light);
 
-  --search-input-width: 25rem;
-  --search-result-width: 45rem;
+    --search-input-width: 25rem;
+    --search-result-width: 45rem;
 
     .suggestions {
         .suggestion {
@@ -173,83 +231,88 @@
 // Dark Mode
 // ----------------------------------------------------------------------------------------------- //
 
-html.dark {
-  // brand colors
-  --c-brand: #F09838;
-  --c-brand-light: #F0C738;
+[data-theme='dark'] {
+    // brand colors
+    --vp-c-accent: var(--c-brand);
+    --vp-c-accent-bg: var(--c-brand);
+    --vp-c-accent-hover: var(--c-brand-light);
+    --vp-c-accent-soft: rgb(16 185 129 / 16%);
 
-  // background colors
-  --c-bg: #22272e;
-  --c-bg-light: #2b313a;
-  --c-bg-lighter: #262c34;
-  --c-bg-dark: #343b44;
-  --c-bg-darker: #37404c;
+    // colors.scss
+    --vp-c-white: #000;
+    --vp-c-black: #fff;
+    --vp-c-grey-text: #939499;
+    --vp-c-grey-hover: #414853;
+    --vp-c-grey-bg: #32363f;
+    --vp-c-grey-soft: rgb(101 117 133 / 16%);
+    --vp-c-indigo-text: #a8b1ff;
+    --vp-c-indigo-hover: #5c73e7;
+    --vp-c-indigo-bg: #3e63dd;
+    --vp-c-indigo-soft: rgb(100 108 255 / 16%);
+    --vp-c-blue-text: #c9e8f2;
+    --vp-c-blue-hover: #a6d9ea;
+    --vp-c-blue-bg: #2785a3;
+    --vp-c-blue-soft: rgb(27 178 229 / 16%);
+    --vp-c-purple-text: #c8abfa;
+    --vp-c-purple-hover: #a879e6;
+    --vp-c-purple-bg: #8e5cd9;
+    --vp-c-purple-soft: rgb(159 122 234 / 16%);
+    --vp-c-green-text: #3dd68c;
+    --vp-c-green-hover: #30a46c;
+    --vp-c-green-bg: #298459;
+    --vp-c-green-soft: rgb(16 185 129 / 16%);
+    --vp-c-yellow-text: #f9b44e;
+    --vp-c-yellow-hover: #da8b17;
+    --vp-c-yellow-bg: #a46a0a;
+    --vp-c-yellow-soft: rgb(234 179 8 / 16%);
+    --vp-c-red-text: #f66f81;
+    --vp-c-red-hover: #f14158;
+    --vp-c-red-bg: #b62a3c;
+    --vp-c-red-soft: rgb(244 63 94 / 16%);
+    // END colors.scss
 
-  // text colors
-  --c-text: #adbac7;
-  --c-text-light: #96a7b7;
-  --c-text-lighter: #8b9eb0;
-  --c-text-lightest: #8094a8;
+    // background colors
+    --vp-c-bg: #22272e;
+    --vp-c-bg-alt: #161618;
+    --vp-c-bg-elv: #202127;
 
-  // border colors
-  --c-border: #3e4c5a;
-  --c-border-dark: #34404c;
+    // text colors
+    --vp-c-text: rgb(235 235 245 / 86%);
+    --vp-c-text-mute: rgb(235 235 245 / 60%);
+    --vp-c-text-subtle: rgb(235 235 245 / 38%);
 
-  // custom container colors
-  --c-tip: #4F81D6;
-  --c-warning: #e0ad15;
-  --c-warning-bg: #2d2f2d;
-  --c-warning-bg-light: #423e2a;
-  --c-warning-bg-lighter: #44442f;
-  --c-warning-border-dark: #957c35;
-  --c-warning-details-bg: #39392d;
-  --c-warning-title: #fdca31;
-  --c-warning-text: #d8d96d;
-  --c-warning-text-accent: #ffbf00;
-  --c-warning-text-light: #ddb84b;
-  --c-warning-text-quote: #ccab49;
-  --c-danger: #fc1e38;
-  --c-danger-bg: #39232c;
-  --c-danger-bg-light: #4b2b35;
-  --c-danger-bg-lighter: #553040;
-  --c-danger-border-dark: #a25151;
-  --c-danger-details-bg: #482936;
-  --c-danger-title: #fc2d3b;
-  --c-danger-text: #ea9ca0;
-  --c-danger-text-accent: #fd3636;
-  --c-danger-text-light: #d9777c;
-  --c-danger-text-quote: #d56b6b;
-  --c-details-bg: #323843;
+    // border colors
+    --vp-c-gutter: #3e535a;
+    --vp-c-border: #3e4c5a;
+    --vp-c-border-hard: #34404c;
 
-  // badge component colors
-  --c-badge-warning: var(--c-warning);
-  --c-badge-warning-text: #3c2e05;
-  --c-badge-danger: var(--c-danger);
-  --c-badge-danger-text: #401416;
+    // shadow color
+    --vp-c-shadow: rgb(0 0 0 / 30%);
 
-  // code blocks vars
-  --code-hl-bg-color: #363b46;
+    // control colors
+    --vp-c-control: rgb(101 117 133 / 12%);
+    --vp-c-control-hover: rgb(101 117 133 / 18%);
+    --vp-c-control-disabled: #363636;
 }
 
-// plugin-docsearch
-html.dark .DocSearch {
-  --docsearch-logo-color: var(--c-text);
-  --docsearch-modal-shadow: inset 1px 1px 0 0 #2c2e40, 0 3px 8px 0 #000309;
-  --docsearch-key-shadow: inset 0 -2px 0 0 #282d55, inset 0 0 1px 1px #51577d,
-  0 2px 2px 0 rgba(3, 4, 9, 0.3);
-  --docsearch-key-gradient: linear-gradient(-225deg, #444950, #1c1e21);
-  --docsearch-footer-shadow: inset 0 1px 0 0 rgba(73, 76, 106, 0.5),
-  0 -4px 8px 0 rgba(0, 0, 0, 0.2);
+[data-theme='dark'] code {
+    color: var(--vp-c-text-mute);
 }
 
 // ----------------------------------------------------------------------------------------------- //
 // Badges
 // ----------------------------------------------------------------------------------------------- //
 
-.badge {
-    
+.vp-badge {
     &.success {
-        background-color: var(--success);
+        color: var(--success);
     }
-    
+}
+
+[data-theme='dark'] {
+    .vp-badge {
+        &.success {
+            color: var(--vp-c-text);
+        }
+    }   
 }
